jfwu\qszuan: release UI defect fix slide#30: remove the overlapping shades of triangle icon in dashboard page

--- a/datawinners/media/css/scss/section_dashboard.scss
+++ b/datawinners/media/css/scss/section_dashboard.scss
@@ -18,6 +18,11 @@ p{
     .ui-widget-content{
         border:1px solid #CCCCCC;
     }
+    >h3{
+      >span.ui-icon-triangle-1-s,.ui-icon-triangle-1-e{
+        display: none
+      }
+    }
     h3{
         background:#F5F5F5 !important;
         padding:10px;
@@ -51,6 +56,9 @@ p{
             font-weight:normal;
             color:#666666;
             float:right;
+        }
+        >span.ui-icon-triangle-1-e{
+          display: none
         }
     }
     .project_header.ui-state-active{
